--- a/cloud_resume.html
+++ b/cloud_resume.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="cloud_resume_css.css" /> 
+</head>
 <div id="header"></div>
 <div class="left"></div>
 <div class="stuff">
